# training-tinyllama-for-tool-calling

./: .gitignore  README.md  main.py  model.py  predict.py  pyproject.toml  register_prefect_flow.py  requirements.txt
.viz/: stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
data/01_raw/: chat_threads.jsonl
docs/source/: conf.py  index.rst
notebooks/: Llama_3_2_Vision_Finetuning_Unsloth_Radiography.ipynb  training-tinyllama-for-tool-calling.ipynb  training-tinyllama-for-tool-calling.output.ipynb
src/training_tinyllama_for_tool_calling/: __init__.py  __main__.py  settings.py
src/training_tinyllama_for_tool_calling/pipelines/data_engineering/: nodes.py  pipeline.py
src/training_tinyllama_for_tool_calling/pipelines/data_science/: nodes.py  pipeline.py
src/training_tinyllama_for_tool_calling/services/: agent.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
